--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spinkit": "^3.0.0",
     "styled-components": "^5.3.3"
   },
   "scripts": {
